--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chalice",
   "version": "0.0.0",
-  "description": "A framework on top of Backbone.js for rendering applications on the client and server.",
-  "main": "index.js",
+  "description": "A small framework on top of CoffeeScript Backbone and Node to render apps on the client and server.",
+  "main": "",
   "directories": {
     "test": "test"
   },
