--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "directories": {
     "test": "test"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "./node_modules/.bin/mocha"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/shanejonas/chalice.git"
@@ -19,7 +21,12 @@
   "devDependencies": {
     "should": "~1.2.2",
     "cheerio": "~0.12.1",
-    "sinon": "~1.7.3"
+    "sinon": "~1.7.3",
+    "mocha": "~1.12.0",
+    "coffee-script": "~1.6.3",
+    "grunt": "~0.4.1",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-clean": "~0.5.0"
   },
   "dependencies": {
     "handlebars": "~1.0.12",
