--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   "bugs": {
     "url": "https://github.com/shanejonas/chalice/issues"
   },
+  "peerDependencies": {
+    "backbone": "~1.0.0",
+    "handlebars": "~1.0.12",
+    "backbone": "~1.0.0",
+    "underscore": "~1.5.1"
+  },
   "devDependencies": {
     "should": "~1.2.2",
     "cheerio": "~0.12.1",
@@ -29,9 +35,6 @@
     "grunt-contrib-clean": "~0.5.0"
   },
   "dependencies": {
-    "handlebars": "~1.0.12",
-    "backbone": "~1.0.0",
-    "underscore": "~1.5.1",
     "connect": "~2.8.4"
   }
 }
